--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         let municipioSeleccionado = target.getAttribute("id")?.substring(0, 5);
 
                         if (!municipioSeleccionado) return;
-
+alert(municipioSeleccionado ? municipioSeleccionado : "FALSE");
                         if (municipiosAPC[municipioSeleccionado] === municipioActual) {
                             target.classList.add("correct");
                             score++;
