--- a/index.html
+++ b/index.html
@@ -25,20 +25,16 @@
     <button onclick="toggleDarkMode()">🌙 Modo oscuro</button>
     <button onclick="resetGame()">Reset</button>
     <div id="map-container"></div>
-    <p id="achievement" class="hidden">🏆 ¡Logro desbloqueado!</p>
 
     <script>
-        const codes = [
-            "28002", "28004", "28006", "28007", "28009", "28013", "28014", "28015", "28022", "28026", "28033", "28040",
+        const codes = [ "28002", "28004", "28006", "28007", "28009", "28013", "28014", "28015", "28022", "28026", "28033", "28040",
             "28041", "28045", "28049", "28052", "28053", "28057", "28058", "28059", "28061", "28065", "28067", "28072",
             "28073", "28074", "28075", "28079", "28080", "28084", "28085", "28086", "28089", "28090", "28091", "28092",
             "28096", "28104", "28106", "28110", "28113", "28115", "28119", "28123", "28127", "28129", "28130", "28132",
             "28134", "28140", "28141", "28147", "28149", "28150", "28152", "28154", "28157", "28161", "28164", "28167",
-            "28170", "28172", "28174", "28175", "28176", "28177", "28178", "28181", "28903"
-        ];
+            "28170", "28172", "28174", "28175", "28176", "28177", "28178", "28181", "28903" ];
 
-        const names = [
-            "Ajalvir", "El Álamo", "Alcobendas", "Alcorcón", "Algete", "Aranjuez", "Arganda del Rey", "Arroyomolinos",
+        const names = [ "Ajalvir", "El Álamo", "Alcobendas", "Alcorcón", "Algete", "Aranjuez", "Arganda del Rey", "Arroyomolinos",
             "Boadilla del Monte", "Brunete", "Campo Real", "Ciempozuelos", "Cobeña", "Colmenar Viejo", "Coslada", "Chinchón",
             "Daganzo de Arriba", "Fresno de Torote", "Fuenlabrada", "Fuente el Saz de Jarama", "Galapagar", "Getafe",
             "Guadalix de la Sierra", "Hoyo de Manzanares", "Humanes de Madrid", "Leganés", "Loeches", "Madrid", "Majadahonda",
@@ -50,29 +46,17 @@
             "Torrejón de la Calzada", "Torrejón de Velasco", "Torrelodones", "Torres de la Alameda",
             "Valdelaguna", "Valdemoro", "Valdetorres de Jarama", "Velilla de San Antonio",
             "Villaconejos", "Villalbilla", "Villamanta", "Villamantilla", "Villanueva de la Cañada",
-            "Villanueva del Pardillo", "Villanueva de Perales", "Villaviciosa de Odón", "Tres Cantos"
-        ];
-
-        if (localStorage.getItem("dark-mode") === "true") {
-            document.body.classList.toggle("dark-mode");
-        }
+            "Villanueva del Pardillo", "Villanueva de Perales", "Villaviciosa de Odón", "Tres Cantos" ];
 
         let attempts = 0;
-        let score = localStorage.getItem("score") || 0;
-        let combo = localStorage.getItem("combo") || 0;
-        let remaining = JSON.parse(localStorage.getItem("remaining")) || [...names].sort(() => Math.random() - 0.5);
-        let current = localStorage.getItem("current");
-
-        document.getElementById("score").innerText = score;
-        document.getElementById("combo").innerText = combo;
+        let remaining = [...names].sort(() => Math.random() - 0.5);
+        let current;
 
         function nextQuestion() {
             if (remaining.length > 0) {
                 attempts = 0;
                 current = remaining.pop();
-                localStorage.setItem("current", current);
                 document.getElementById("question").innerText = `Haz clic en: ${current}`;
-                localStorage.setItem("remaining", JSON.stringify(remaining));
                 enableClicks(true);
             } else {
                 document.getElementById("question").innerText = "¡Juego terminado!";
@@ -81,15 +65,10 @@
 
         function toggleDarkMode() {
             document.body.classList.toggle("dark-mode");
-            localStorage.setItem("dark-mode", !(localStorage.getItem("dark-mode") === "true"));
         }
 
         function resetGame() {
-            localStorage.setItem("score", score = 0);
-            localStorage.setItem("combo", combo = 0);
             remaining = [...names].sort(() => Math.random() - 0.5);
-            document.getElementById("score").innerText = score;
-            document.getElementById("combo").innerText = combo;
             nextQuestion();
         }
 
@@ -100,39 +79,50 @@
         fetch("mapa.svg")
             .then(response => response.text())
             .then(svgData => {
-                requestIdleCallback(() => {
-                    document.getElementById("map-container").innerHTML = svgData;
-                    let svg = d3.select("#map-container svg");
-                    svg.selectAll("path").filter(function() {
-                        return codes.includes(this.getAttribute("id")?.substring(0, 5));
-                    }).classed("apc", true);
+                document.getElementById("map-container").innerHTML = svgData;
+                let svg = d3.select("#map-container svg");
 
-                    svg.on("click", function(event) {
-                        let target = event.target;
-                        let selected = target.getAttribute("id")?.substring(0, 5);
-                        if (!selected || !codes.includes(selected)) return;
+                svg.selectAll("path").filter(function() {
+                    return codes.includes(this.getAttribute("id")?.substring(0, 5));
+                }).classed("apc", true);
 
-                        if (names[codes.indexOf(selected)] === current) {
-                            enableClicks(false);
-                            target.classList.add("correct");
-                            setTimeout(() => {
-                                target.classList.remove("correct");
-                                nextQuestion();
-                            }, 3000);
-                        } else {
-                            attempts++;
-                            target.classList.add("incorrect");
-                            setTimeout(() => target.classList.remove("incorrect"), 2000);
-                            if (attempts >= 3) nextQuestion();
-                        }
-                    });
+                svg.on("click", function(event) {
+                    let target = event.target;
+                    let selected = target.getAttribute("id")?.substring(0, 5);
+                    if (!selected || !codes.includes(selected)) return;
 
-                    if (current) {
-                        document.getElementById("question").innerText = `Haz clic en: ${current}`;
+                    if (names[codes.indexOf(selected)] === current) {
+                        enableClicks(false);
+                        target.classList.add("correct");
+                        setTimeout(() => {
+                            target.classList.remove("correct");
+                            nextQuestion();
+                        }, 5000);
                     } else {
-                        nextQuestion();
+                        attempts++;
+                        target.classList.add("incorrect");
+                        setTimeout(() => target.classList.remove("incorrect"), 2000);
+
+                        if (attempts >= 3) {
+                            enableClicks(false);
+                            let correctIndex = names.indexOf(current);
+                            let correctCode = codes[correctIndex];
+                            let correctElement = svg.select(`[id^="${correctCode}"]`).node();
+
+                            if (correctElement) {
+                                correctElement.classList.add("correct");
+                                setTimeout(() => {
+                                    correctElement.classList.remove("correct");
+                                    nextQuestion();
+                                }, 5000);
+                            } else {
+                                nextQuestion();
+                            }
+                        }
                     }
                 });
+
+                nextQuestion();
             })
             .catch(error => console.error("Error cargando el mapa:", error));
     </script>
