--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Trivia APC Madrid</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; background: #f4f4f4; transition: background 0.3s, color 0.3s; }
+        body { font-family: Arial, sans-serif; text-align: center; background: #f4f4f4; transition: background 0.3s; }
         .dark-mode { background: #222; color: #fff; }
         svg { width: 90vw; height: auto; margin: auto; display: block; }
         .apc { fill: lightgray; stroke: black; stroke-width: 0.5px; cursor: pointer; transition: fill 0.3s ease, transform 0.2s ease; }
@@ -28,67 +28,69 @@
     <p id="logro" class="hidden">🏆 ¡Logro desbloqueado!</p>
 
     <script>
-        // Aplica el modo oscuro si estaba activado antes
-        if (localStorage.getItem("darkMode") === "enabled") {
-            document.body.classList.add("dark-mode");
-        }
-
-        function toggleDarkMode() {
-            let body = document.body;
-            if (body.classList.contains("dark-mode")) {
-                body.classList.remove("dark-mode");
-                localStorage.setItem("darkMode", "disabled");
-            } else {
-                body.classList.add("dark-mode");
-                localStorage.setItem("darkMode", "enabled");
-            }
-        }
-
         const codes = [
-            "28002", "28004", "28006", "28007", "28009", "28013", "28014", "28015", "28022", "28026", "28033", "28040",
-            "28041", "28045", "28049", "28052", "28053", "28057", "28058", "28059", "28061", "28065", "28067", "28072",
-            "28073", "28074", "28075", "28079", "28080", "28084", "28085", "28086", "28089", "28090", "28091", "28092",
-            "28096", "28104", "28106", "28110", "28113", "28115", "28119", "28123", "28127", "28129", "28130", "28132",
-            "28134", "28140", "28141", "28147", "28149", "28150", "28152", "28154", "28157", "28161", "28164", "28167",
-            "28170", "28172", "28174", "28175", "28176", "28177", "28178", "28181", "28903" 
+            "28002", "28004", "28006", "28007", "28009", "28013", "28014", "28015",
+            "28022", "28026", "28033", "28040", "28041", "28045", "28049", "28052",
+            "28053", "28057", "28058", "28059", "28061", "28065", "28067", "28072",
+            "28073", "28074", "28075", "28079", "28080", "28084", "28085", "28086",
+            "28089", "28090", "28091", "28092", "28096", "28104", "28106", "28110",
+            "28113", "28115", "28119", "28123", "28127", "28129", "28130", "28132",
+            "28134", "28140", "28141", "28147", "28149", "28150", "28152", "28154",
+            "28157", "28161", "28164", "28167", "28170", "28172", "28174", "28175",
+            "28176", "28177", "28178", "28181", "28903"
         ];
 
         const names = [
-            "Ajalvir", "El Álamo", "Alcobendas", "Alcorcón", "Algete", "Aranjuez", "Arganda del Rey", "Arroyomolinos",
-            "Boadilla del Monte", "Brunete", "Campo Real", "Ciempozuelos", "Cobeña", "Colmenar Viejo", "Coslada", "Chinchón",
-            "Daganzo de Arriba", "Fresno de Torote", "Fuenlabrada", "Fuente el Saz de Jarama", "Galapagar", "Getafe",
-            "Guadalix de la Sierra", "Hoyo de Manzanares", "Humanes de Madrid", "Leganés", "Loeches", "Madrid", "Majadahonda",
-            "Mejorada del Campo", "Miraflores de la Sierra", "El Molar", "Moraleja de Enmedio", "Moralzarzal",
-            "Morata de Tajuña", "Móstoles", "Navalcarnero", "Paracuellos de Jarama", "Parla", "Perales de Tajuña",
-            "Pinto", "Pozuelo de Alarcón", "Quijorna", "Rivas-Vaciamadrid", "Las Rozas de Madrid",
-            "San Agustín del Guadalix", "San Fernando de Henares", "San Martín de la Vega",
-            "San Sebastián de los Reyes", "Serranillos del Valle", "Sevilla la Nueva", "Titulcia",
-            "Torrejón de la Calzada", "Torrejón de Velasco", "Torrelodones", "Torres de la Alameda",
-            "Valdelaguna", "Valdemoro", "Valdetorres de Jarama", "Velilla de San Antonio",
-            "Villaconejos", "Villalbilla", "Villamanta", "Villamantilla", "Villanueva de la Cañada",
-            "Villanueva del Pardillo", "Villanueva de Perales", "Villaviciosa de Odón", "Tres Cantos"
+            "Ajalvir", "El Álamo", "Alcobendas", "Alcorcón", "Algete", "Aranjuez",
+            "Arganda del Rey", "Arroyomolinos", "Boadilla del Monte", "Brunete",
+            "Campo Real", "Ciempozuelos", "Cobeña", "Colmenar Viejo", "Coslada",
+            "Chinchón", "Daganzo de Arriba", "Fresno de Torote", "Fuenlabrada",
+            "Fuente el Saz de Jarama", "Galapagar", "Getafe", "Guadalix de la Sierra",
+            "Hoyo de Manzanares", "Humanes de Madrid", "Leganés", "Loeches", "Madrid",
+            "Majadahonda", "Mejorada del Campo", "Miraflores de la Sierra", "El Molar",
+            "Moraleja de Enmedio", "Moralzarzal", "Morata de Tajuña", "Móstoles",
+            "Navalcarnero", "Paracuellos de Jarama", "Parla", "Perales de Tajuña",
+            "Pinto", "Pozuelo de Alarcón", "Quijorna", "Rivas-Vaciamadrid",
+            "Las Rozas de Madrid", "San Agustín del Guadalix", "San Fernando de Henares",
+            "San Martín de la Vega", "San Sebastián de los Reyes", "Serranillos del Valle",
+            "Sevilla la Nueva", "Titulcia", "Torrejón de la Calzada", "Torrejón de Velasco",
+            "Torrelodones", "Torres de la Alameda", "Valdelaguna", "Valdemoro",
+            "Valdetorres de Jarama", "Velilla de San Antonio", "Villaconejos",
+            "Villalbilla", "Villamanta", "Villamantilla", "Villanueva de la Cañada",
+            "Villanueva del Pardillo", "Villanueva de Perales", "Villaviciosa de Odón",
+            "Tres Cantos"
         ];
 
+        let clickDisabled = false;
+        if (localStorage.getItem("dark-mode") === "true") { document.body.classList.toggle("dark-mode"); }
         let tries = 0;
-        let score = 0;
-        let combo = 0;
-        let locked = false;
-        let left = [...names].sort(() => Math.random() - 0.5);
-        let current = null;
+        let score = localStorage.getItem("score") || 0;
+        let combo = localStorage.getItem("combo") || 0;
+        let left = JSON.parse(localStorage.getItem("left")) || [...names].sort(() => Math.random() - 0.5);
+        let current = localStorage.getItem("current");
 
         function next() {
+            clickDisabled = false;
             if (left.length > 0) {
                 tries = 0;
                 current = left.pop();
+                localStorage.setItem("current", current);
                 document.getElementById("question").innerText = `Haz clic en: ${current}`;
+                localStorage.setItem("left", JSON.stringify(left));
             } else {
                 document.getElementById("question").innerText = "¡Juego terminado!";
             }
         }
 
+        function toggleDarkMode() {
+            document.body.classList.toggle("dark-mode");
+            localStorage.setItem("dark-mode", !(localStorage.getItem("dark-mode") === "true"));
+        }
+
         function reset() {
-            score = combo = tries = 0;
-            left = [...names].sort(() => Math.random() - 0.5);
+            localStorage.setItem("score", score = 0);
+            localStorage.setItem("combo", combo = 0);
+            left = names.sort(() => Math.random() - 0.5);
             document.getElementById("score").innerText = score;
             document.getElementById("combo").innerText = combo;
             next();
@@ -100,14 +102,13 @@
                 requestIdleCallback(() => {
                     document.getElementById("map-container").innerHTML = svgData;
                     let svg = d3.select("#map-container svg");
-
                     svg.selectAll("path").filter(function() {
                         return codes.includes(this.getAttribute("id")?.substring(0, 5));
                     }).classed("apc", true);
 
                     svg.on("click", function(event) {
-                        if (locked) return;
-                        
+                        if (clickDisabled) return;
+
                         let target = event.target;
                         let selected = target.getAttribute("id")?.substring(0, 5);
 
@@ -117,9 +118,11 @@
                             target.classList.add("correct");
                             score++;
                             combo++;
-
                             document.getElementById("score").innerText = score;
                             document.getElementById("combo").innerText = combo;
+                            localStorage.setItem("score", score);
+                            localStorage.setItem("combo", combo);
+                            clickDisabled = true;
 
                             setTimeout(() => {
                                 target.classList.remove("correct");
@@ -132,26 +135,16 @@
                             setTimeout(() => target.classList.remove("incorrect"), 2000);
 
                             if (tries >= 3) {
-                                tries = 0;
-                                locked = true;
-                                let correct = codes[names.indexOf(current)];
-                                let cPath = document.querySelector(`path[id*='${correct}']`);
-                                if (cPath) cPath.classList.add("highlight");
-
-                                setTimeout(() => {
-                                    cPath.classList.remove("highlight");
-                                    combo = 0;
-                                    locked = false;
-                                    document.getElementById("combo").innerText = combo;
-                                    next();
-                                }, 3000);
+                                clickDisabled = true;
+                                setTimeout(next, 3000);
                             }
                         }
                     });
 
-                    next();
+                    if (current) document.getElementById("question").innerText = `Haz clic en: ${current}`;
+                    else next();
                 });
-            }).catch(error => console.error("Error cargando el mapa:", error));
+            });
     </script>
 
 </body>
